--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,18 @@
-h2{
-    color: red;
+/* Setting fonts..................................................... */
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+@import url('https://fonts.cdnfonts.com/css/miama');
+
+                
+
+.inter-normal {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight:400;
+  font-style: normal;
 }
+
+.miama-normal{
+    font-family: 'Miama', sans-serif;                                            
+}
+/* .................................................................... */
