--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,165 @@
+*{
+    margin: 0;
+    padding:0;
+}
+body{
+    /* max-width:100%;
+    margin: 0 auto; */
+}
+.header{
+background: rgb(17,17,17);
+background: linear-gradient(180deg, rgba(17,17,17,1) 0%, rgba(119,119,119,1) 100%);
+
+}
 /* Setting fonts..................................................... */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
-@import url('https://fonts.cdnfonts.com/css/miama');
-
                 
 
-.inter-normal {
+.inter-normal{
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight:400;
   font-style: normal;
 }
 
-.miama-normal{
-    font-family: 'Miama', sans-serif;                                            
+@font-face {
+    font-family: 'Miama';
+    src: url('../fonts/Miama.ttf') format('truetype'); /* Adjust the path and format as needed */
+    font-weight: normal;
+    font-style: normal;
 }
+
 /* .................................................................... */
+/* Navbar related styles................................................. */
+header{
+max-width:90%;
+margin: 0 auto;
+}
+.nav-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 0px 40px 0px;
+
+}
+.nav-links{
+    display: flex;
+    border: 1px solid rgba(255,255,255,.1);
+    padding: 12px 40px 12px 5px;
+    justify-content: space-between;
+    align-items: center;
+    width: 30%;
+    border-radius: 39px;
+    font-size: 1.1rem;
+
+}
+.nav-link{
+    text-decoration: none;
+    color: #FFFFFF;
+}
+.nav-link-home{
+    margin-left: 0px;
+    /* border: 2px solid green; */
+    border-radius: 46px;
+    padding: .5rem 1rem;
+    background-color: #E6533C;
+    font-weight: 600;
+
+}
+.nav-items{
+    list-style: none;
+}
+.nav-title{
+    color: #E6533C;
+    font-style: italic;
+    font-size:2rem;
+    font-weight: 800;
+
+    
+}
+.hambar{
+    display: none;
+    font-size: 30px;
+}
+
+/* ....................................................................... */
+/* Banner */
+.banner{
+    display: flex;
+
+}
+.banner-intro{
+    margin-right: 12rem;
+    
+}
+.banner-image-container{
+    max-width: 250px;
+    max-height:460px
+}
+.banner-image{
+    width: 100%;
+    height: 100%;
+    
+    
+}
+.banner-intro-title{
+    font-size:4rem;
+    color: #FFFFFF;
+    font-weight: 800;
+    position: relative;
+    
+}
+.banner-description{
+    font-size: 1rem;
+    margin-top: -40px;
+    color:rgba(255,255,255,.5) ;
+}
+
+#banner-stylish-1{
+    color: #FFFFFF;
+    font-family:'Miama', sans-serif;
+    font-size:10rem;
+    position: relative;
+    top: -60px;
+    font-weight:100;
+}
+#banner-stylish-2{
+    color: #FFFFFF;
+    font-size:4rem;
+    position: relative;
+    top: -60px;
+    font-weight:800;
+}
+#banner-stylish-3{
+    color: #FFFFFF;
+    font-size:4rem;
+    position: absolute;
+    top: 180px;
+    font-weight:800;
+}
+.banner-button-1{
+    padding: 16px 40px;
+    border-radius:42px;
+    border: none;
+    margin-top: 26px;
+    background-color:#E6533C;
+    color:#FFFFFF;
+    font-size: 1rem;
+    font-weight: 600;
+
+}
+.banner-button-2{
+    padding: 16px 40px;
+    border-radius:42px;
+    border: none;
+    margin-top: 26px;
+    background-color:transparent;
+    border:1px solid #FFFFFF ;
+    color:#FFFFFF;
+    font-size: 1rem;
+    font-weight: 600;
+
+}
+.banner-container{
+    margin-bottom: 50px;
+}
