nav and banner done

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -20,4 +20,14 @@
         display: flex;
         justify-content: space-between;
     }
+    .banner-sticker-1{
+        margin-top: -230px;
+        margin-left: -60px;
+        
+    }
+    .banner-sticker-2{
+        margin-top: -200px;
+        margin-left: 190px;
+        
+    }
 }
