habit section done

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding:0;
 }
+main{
+    background-color: black;
+    box-shadow: 0 -50px 120px  rgba(0, 0, 0, 1);
+}
 body{
     /* max-width:100%;
     margin: 0 auto; */
@@ -214,3 +218,52 @@ margin: 0 auto;
     color: rgba(255,255,255,.65);
     font-size: .8rem;
 }
+
+/* Section habit */
+.habit{
+    max-width: 90%;
+    margin: 0 auto;
+    color: white;
+    text-align: center;
+    padding-bottom: 80px;
+    box-shadow: black;
+    /* box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.9); Horizontal offset, vertical offset, blur radius, color */
+}
+    
+
+.habit-title{
+    padding-top: 80px;
+    padding-bottom: 10px;
+    font-size: 2.5rem;
+    font-weight: 800;
+}
+.habit-description{
+    color: rgba(255,255,255,.5);
+    font-size: .80rem;
+}
+.card-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    margin-top: 50px;
+}
+.card-image{
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    border:4px solid rgba(255,255,255,.1);
+    margin-bottom: 24px;
+
+}
+.card-container h3{
+    font-weight: 600;
+    font-size: 1rem;
+    margin-bottom: 10px;
+
+}
+.card-container p{
+    font-weight: 400;
+    font-size: .7rem;
+
+}
+
+
