--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -30,4 +30,9 @@
         margin-left: 190px;
         
     }
+    .card-container{
+        grid-template-columns: repeat(1,1fr);
+        gap: 60px;
+    
+    }
 }
