--- a/styles/style.css
+++ b/styles/style.css
@@ -258,11 +258,13 @@ margin: 0 auto;
     font-weight: 600;
     font-size: 1rem;
     margin-bottom: 10px;
+    color: #FFFFFF;
 
 }
 .card-container p{
     font-weight: 400;
     font-size: .7rem;
+    color: rgba(255,255,255,.5);
 
 }
 
