bmi section initialization

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -39,6 +39,7 @@
         grid-template-columns: repeat(1,1fr);
         justify-items: center;
         gap: 24px;
+        align-items: center;
     }
     .run-image-card{
         padding-left: 0;
