BMI calculator challenge part completed

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -51,4 +51,12 @@
         text-align: center;
         width: 300px;
     }
+    .bmi-container{
+        display: flex;
+        flex-direction: column;
+    }
+    .cal-bmi{
+        margin:0 auto;
+    }
+    
 }
