--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -60,8 +60,16 @@
     }
     .team-card-container{
         grid-template-columns: repeat(1,1fr);
+        
     }
     .team-card-image{
         width: 100%;
+        
+    }
+    .footer{
+        flex-direction: column;
+    }
+    .fitness, .start{
+        margin-bottom: 30px;
     }
 }
