fixed some in the run section

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -48,7 +48,7 @@
         margin-right: 24px;
     }
     .run-btn{
-        text-align: center;
+        /* text-align: center; */
         width: 300px;
     }
     .bmi-container{
