--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -37,9 +37,9 @@
     }
     .run{
         grid-template-columns: repeat(1,1fr);
-        justify-items: center;
+        /* justify-items: center; */
         gap: 24px;
-        align-items: center;
+        /* align-items: center; */
     }
     .run-image-card{
         padding-left: 0;
@@ -50,6 +50,9 @@
     .run-btn{
         /* text-align: center; */
         width: 200px;
+    }
+    .run-image-card{
+        margin-left: 20px;
     }
     .bmi-container{
         display: flex;
