fixed some bugs

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -52,7 +52,7 @@
         width: 250px;
     }
     .run-image{
-        width: 95%;
+        /* width: 100%; */
         margin:0 auto;
     }
     .bmi-container{
