all section completed without unique section

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -43,6 +43,7 @@
     }
     .run-image-card{
         padding-left: 0;
+        margin: 0 auto;
     }
     .run-info{
         margin-right: 24px;
