Unique section completed

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -78,4 +78,7 @@
     .fitness, .start{
         margin-bottom: 30px;
     }
+    .price-container{
+        grid-template-columns: repeat(1,1fr);
+    }
 }
