--- a/styles/style.css
+++ b/styles/style.css
@@ -565,6 +565,53 @@ hr{
     border:1px solid rgba(255,255,255,.1);
     margin-bottom:30px ;
 }
+.price{
+    max-width: 90%;
+    margin:0 auto;
+    color: white;
+}
+.price-title{
+    text-align: center;
+    margin-bottom: 70px;
+}
+.price-container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(2,1fr);
+    gap: 40px;
+    padding-bottom: 90px;
+
+}
+.card{
+    
+    text-align:center;
+    background: linear-gradient(90deg, hsla(0, 0%, 0%, 1) 11%, hsla(11, 80%, 57%, 1) 99%);
+    border-radius: 18px;
+    padding: 30px;
+}
+.card-btn{
+    margin-top: 170px;
+    margin-bottom: 30px;
+    background-color: #c8331d;
+    padding:20px 40px;
+    border-radius: 18px;
+    border: none;
+    color: #FAFAF9;
+    font-weight: 800;
+}
+.card-title{
+    font-size: 1.2;
+    
+}
+.card-price{
+    font-size: 3rem;
+}
+.card-description{
+    font-size: .9rem;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 20px;
+}
 
 
 
